--- a/main.css
+++ b/main.css
@@ -4,8 +4,41 @@
   
 }
 
-body {
+.background {
   
-  background-image: url("assets/freedom.jpg");
+  background: url("assets/freedom.jpg") no-repeat;
+  background-size: cover;
+  height: 100vh;                   
+  width: 100vw;
+  text-align: center;
+  display: table;
   
+}
+
+.wrapper {
+  display: table-cell;
+  vertical-align: middle;
+  padding: 0.625rem;
+  position: relative;
+  top: -21rem;
+}
+
+h1 {
+  
+  text-transform: uppercase;
+  font-family: 'Julius Sans One', sans-serif;
+  font-size: 2.2rem;
+  letter-spacing: 0.1rem;
+  line-height: 4rem;
+  padding: 8%;
+  opacity: 95%;
+}
+
+p {
+  
+  font-family: 'Crimson Text', serif;  
+  font-size: 1.5rem;
+  font-style: italic;
+  opacity: 95%;
+  margin-top: -6rem;
 }
