--- a/main.css
+++ b/main.css
@@ -20,25 +20,56 @@
   vertical-align: middle;
   padding: 0.625rem;
   position: relative;
-  top: -21rem;
+  top: -8rem;
 }
+
+ /*@media(max-width: 320px) {
+  
+  .wrapper {
+    
+    top: -3.8rem;
+    
+  }
+  
+}*/
 
 h1 {
   
   text-transform: uppercase;
   font-family: 'Julius Sans One', sans-serif;
-  font-size: 2.2rem;
-  letter-spacing: 0.1rem;
-  line-height: 4rem;
-  padding: 8%;
+  font-size: 1.2rem;
+  font-weight: bold;
+  line-height: 3.5rem;
+  padding: 4rem;
   opacity: 95%;
 }
+
+/*@media(max-width: 320px) {
+  
+ h1 {
+    
+   font-size: 1.8rem;
+   line-height: 3.5rem;
+   padding: 2.5rem;
+   font-weight: 500;
+    
+  }*/
+ 
 
 p {
   
   font-family: 'Crimson Text', serif;  
   font-size: 1.5rem;
   font-style: italic;
-  opacity: 95%;
-  margin-top: -6rem;
+  margin-bottom: -10rem;
 }
+
+  /*@media(max-width: 320px){
+  
+  p {
+  
+  font-size: 1.3rem;
+  margin-top: 1rem;
+  }
+    
+}*/
