--- a/main.css
+++ b/main.css
@@ -23,15 +23,15 @@
   top: -8rem;
 }
 
- /*@media(max-width: 320px) {
+ @media(min-width: 1920px) {
   
   .wrapper {
     
-    top: -3.8rem;
+    top: -13rem;
     
   }
   
-}*/
+}
 
 h1 {
   
@@ -44,32 +44,37 @@ h1 {
   opacity: 95%;
 }
 
-/*@media(max-width: 320px) {
+@media(min-width: 1920px) {
   
  h1 {
     
-   font-size: 1.8rem;
-   line-height: 3.5rem;
-   padding: 2.5rem;
-   font-weight: 500;
-    
-  }*/
- 
+   font-size: 2.1rem;
+   line-height: 4rem;
+   letter-spacing: 0.1rem;
+   padding: 9rem;
+   padding-bottom: 2rem;
+   opacity: 70%;
+  }
+}
 
 p {
   
   font-family: 'Crimson Text', serif;  
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-style: italic;
   margin-bottom: -10rem;
+  font-weight: bold;
+  
 }
 
-  /*@media(max-width: 320px){
+  @media(min-width: 1920px){
   
   p {
   
-  font-size: 1.3rem;
-  margin-top: 1rem;
+  font-size: 1.8rem;
+  margin-bottom: -11rem;
+    opacity: 80%;
+
   }
     
-}*/
+}
