Language-change buttons added.

--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@
   top: -8rem;
 }
 
- @media(min-width: 1920px) {
+ @media(min-width: 1920px){
   
   .wrapper {
     
@@ -44,7 +44,7 @@ h1 {
   opacity: 95%;
 }
 
-@media(min-width: 1920px) {
+@media(min-width: 1920px){
   
  h1 {
     
@@ -73,8 +73,56 @@ p {
   
   font-size: 1.8rem;
   margin-bottom: -11rem;
-    opacity: 80%;
+  opacity: 80%;
 
   }
     
+}
+
+.button {
+  
+  padding: 5px;
+  margin-top: -60px;
+  text-align: center;
+  height: 3rem;
+  line-height: 2.5rem;
+  letter-spacing: 0.1rem;
+  
+}
+
+a {
+  
+  text-decoration: none;
+  text-align: center;
+  padding: 1px 8px;
+  margin: 2px;
+  color: darkgoldenrod;
+  background-color: black;
+  opacity: 60%;
+  font-size: 1.5rem;
+  
+}
+
+@media(min-width: 1920px){
+  
+  .button {
+    
+    text-align: left;  
+    margin-top: -300px;
+    margin-left: 30px;
+    border: none;
+    
+  }
+  
+  a  {
+    
+    display: block;
+    width: 5rem;
+    height: 3rem;
+    line-height: 3rem;
+    padding: 3px;
+    margin-bottom: 3px;
+    
+  }
+  
 }
