--- a/main.css
+++ b/main.css
@@ -7,7 +7,9 @@
 .background {
   
   background: url("assets/freedom.jpg") no-repeat;
-  background-size: cover;
+  
+  background-size: cover; /* ---- FIX THE MOBILE FORMAT! ------- */
+  
   height: 100vh;                   
   width: 100vw;
   text-align: center;
@@ -117,11 +119,11 @@ a {
   a  {
     
     display: block;
-    width: 5rem;
-    height: 3rem;
-    line-height: 3rem;
+    width: 8rem;
+    height: 2rem;
+    line-height: 2rem;
     padding: 3px;
-    margin-bottom: 3px;
+    margin-bottom: 1rem;
     
   }
   
