--- a/main.css
+++ b/main.css
@@ -7,13 +7,18 @@
 .background {
   
   background: url("assets/freedom.jpg") no-repeat;
-  
   background-size: cover; /* ---- FIX THE MOBILE FORMAT! ------- */
-  
+  background-position: 50%;
   height: 100vh;                   
   width: 100vw;
   text-align: center;
   display: table;
+  
+}
+
+@media(min-width: 1920px){
+  
+  background-position: default;
   
 }
 
@@ -22,14 +27,14 @@
   vertical-align: middle;
   padding: 0.625rem;
   position: relative;
-  top: -8rem;
+  top: -18rem;
 }
 
  @media(min-width: 1920px){
   
   .wrapper {
     
-    top: -13rem;
+    top: -16rem;
     
   }
   
@@ -41,8 +46,8 @@ h1 {
   font-family: 'Julius Sans One', sans-serif;
   font-size: 1.2rem;
   font-weight: bold;
-  line-height: 3.5rem;
-  padding: 4rem;
+  line-height: 2.8rem;
+  padding: 1rem 1rem 2rem 1rem;
   opacity: 95%;
 }
 
@@ -64,7 +69,7 @@ p {
   font-family: 'Crimson Text', serif;  
   font-size: 1rem;
   font-style: italic;
-  margin-bottom: -10rem;
+  margin-bottom: -13rem;
   font-weight: bold;
   
 }
